# riptide

./: .gitignore  .gitmodules  Cargo.toml  README.md  config.example.toml  docker-compose.yml  interactions.toml  rustfmt.toml
.github/workflows/: build-dashboard.yml  build-gateway.yml  push-gateway.yml  push-worker.yml
dashboard/: .eslintrc.js  next.config.js  package-lock.json  package.json  tailwind.config.js
dashboard/src/: reducer.ts  store.ts
dashboard/src/components/: CommandItem.tsx  GuildItem.tsx  LoadingIcon.tsx  Nav.tsx  NavItem.tsx  QueueItem.tsx
dashboard/src/pages/: _app.tsx  _document.tsx  callback.tsx  commands.tsx  index.tsx
dashboard/src/pages/dashboard/: index.tsx
dashboard/src/pages/dashboard/[id]/: player.tsx
dashboard/src/styles/: global.css
docker/gateway/: Dockerfile
docker/lavalink/: Dockerfile  application.yml
docker/prometheus/: prometheus.yml
docker/worker/: Dockerfile
gateway/: Cargo.toml  build.rs
gateway/src/: client.rs  event.rs  lib.rs  main.rs  model.rs  protobuf.rs  stats.rs
gateway/src/cache/: mod.rs  update.rs
gateway/src/service/: cache.rs  dispatch.rs  gateway.rs  mod.rs
worker/: .eslintrc.js  package-lock.json  package.json
worker/src/: index.js
worker/src/commands/: ping.js
worker/src/commands/music/: listqueues.js  loadqueue.js  loop.js  notifications.js  np.js  play.js  queue.js  savequeue.js  skip.js  stop.js  volume.js
worker/src/commands/owner/: eval.js  reload.js
worker/src/commands/system/: help.js  ping.js  stats.js
worker/src/entities/: User.js
worker/src/events/: interaction_create.js  message_create.js  voice_server_update.js  voice_state_update.js
worker/src/routes/: authenticate.js  commands.js  guilds.js  playerActive.js  socket.js
worker/src/structures/: Client.js  Command.js  Context.js  Event.js  Handler.js  Route.js  Util.js
worker/src/structures/util/: Logger.js  QueuePlugin.js
