[package]
name = "gateway"
version = "0.1.0"
authors = ["diced <pranaco2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-gateway = { git = "https://github.com/Erk-/twilight", branch = "feature/slash" }
twilight-model = { git = "https://github.com/Erk-/twilight", branch = "feature/slash" }

serde = "1.0.123"
serde_json = "1.0.62"
futures = "0.3.12"
env_logger = "0.8.3"
log = "0.4.14"
toml = "0.5.8"

tokio = { version = "1", features = ["full"] }
redis = { version = "0.17.0", features = ["tokio-comp"] }