[package]
name = "gateway"
version = "0.1.0"
authors = ["diced <pranaco2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# discord
twilight-gateway = { git = "https://github.com/Erk-/twilight", branch = "feature/slash" }
twilight-model = { git = "https://github.com/Erk-/twilight", branch = "feature/slash" }

jemallocator = "0.3.0"
jemalloc-ctl = "0.3.3"

tonic = { version = "0.4.0", features = ["tls", "transport"] }
prost-types = "0.7"
prost = "0.7"

# serde
serde = "1.0.123"
serde_json = "1.0.62"

# log
simple_logger = "1.11.0"
log = "0.4.14"
toml = "0.5.8"

# async tokio shit
futures = "0.3.12"
tokio = { version = "1", features = ["rt", "sync"] }
tokio-stream = { version =  "0.1", features = ["net"] }
redis = { version = "0.17.0", features = ["tokio-comp"] }
sentry = "0.21.0"
dashmap = "4.0.2"
prometheus = "0.12.0"
hyper = "0.14.4"

[build-dependencies]
tonic-build = { version = "0.4.0", features = ["prost"] }
